force-app/main/default/objects/Bill__c/fields/Bill_Stage__c.field-meta.xml
<CustomField>
    <fullName>Bill_Stage__c</fullName>
    <label>Bill Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>