force-app/main/default/objects/Bill__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <label>Charge Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental Charges</fullName>
            </value>
            <value>
                <fullName>Transport charges</fullName>
            </value>
            <value>
                <fullName>Corpus Fund 1</fullName>
            </value>
            <value>
                <fullName>Corpus Fund 2</fullName>
            </value>
            <value>
                <fullName>Corpus Fund 3</fullName>
            </value>
            <value>
                <fullName>Corpus Fund 4</fullName>
            </value>
            <value>
                <fullName>Corpus Fund 5</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Misc/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>