force-app/main/default/objects/Bill__c/fields/Is_Interest_Waived_Off__c.field-meta.xml
<CustomField>
    <fullName>Is_Interest_Waived_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interest Waived Off</label>
    <type>Checkbox</type>
</CustomField>