force-app/main/default/objects/Bill__c/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <formula>Total_Amount__c - Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>