force-app/main/default/objects/Bill__c/fields/Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Sheet</label>
    <referenceTo>Term_Sheet__c</referenceTo>
    <relationshipName>Draft_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>